--- a/cadastro.html
+++ b/cadastro.html
@@ -29,7 +29,7 @@
                 </div>
                 
                 <div>
-                    <label for="for">E-mail:</label>
+                    <label for="email">E-mail:</label>
                     <input type="email" id="email" name="email" required placeholder="seuemail@dominio.com">
                 </div>
 
@@ -40,7 +40,7 @@
 
                 <div>
                     <label for="telefone">Telefone:</label>
-                    <input type="tel" id="telefone" name: telefone required placeholder="(XX) XXXXX-XXXX" pattern="\([0-9]{2}\) [0-9]{5}-[0-9]{4}">
+                    <input type="tel" id="telefone" name="telefone" required placeholder="(XX) XXXXX-XXXX" pattern="\([0-9]{2}\) [0-9]{5}-[0-9]{4}">
                 </div>
             </fieldset>
             <fieldset>
@@ -60,7 +60,8 @@
 
                 <div>
                     <label for="estado">Estado:</label>
-                    <select id="estado" name="estado">
+                    <select id="estado" name="estado" required>
+                        <option value="">Selecione...</option>
                         <option value="AC">Acre</option>
                         <option value="AL">Alagoas</option>
                         <option value="AP">Amapá</option>
