--- a/cadastro.html
+++ b/cadastro.html
@@ -4,107 +4,137 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ONG AmiCão - Cadastro</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <h1>ONG AmiCão</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Início</a></li>
-                <li><a href="projetos.html">Nossos Projetos</a></li>
-                <li><a href="cadastro.html">Seja um Voluntário</a></li>
-            </ul>
-        </nav>
+        <div class="container"> 
+            <h1>ONG AmiCão</h1>
+            <input type="checkbox" id="menu-toggle" class="menu-toggle-checkbox">
+            <label for="menu-toggle" class="menu-toggle-label">
+                <span class="hamburger"></span>
+            </label>
+            <nav class="menu">
+                <ul>
+                    <li><a href="index.html">Início</a></li>
+                    <li class="dropdown"> <a href="projetos.html">Nossos Projetos</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="projetos.html#voluntariado">Voluntariado</a></li>
+                            <li><a href="projetos.html#doacao">Como Doar</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="cadastro.html">Seja um Voluntário</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
-        <h2>Formulário de Cadastro de Voluntários</h2>
-        <p>Preencha seus dados abaixo e aguarde nosso contato.</p>
-        <form action="#" method="post">
-            <fieldset>
-                <legend>Dados Pessoais</legend>
-
-                <div>
-                    <label for="nome">Nome Completo:</label>
-                    <input type="text" id="nome" name="nome_completo" required minlength="3">
-                </div>
-                
-                <div>
-                    <label for="email">E-mail:</label>
-                    <input type="email" id="email" name="email" required placeholder="seuemail@dominio.com">
-                </div>
-
-                <div>
-                    <label for="nascimento">Data de Nascimento:</label>
-                    <input type="date" id="nascimento" name="data_nascimento" required>
-                </div>
-
-                <div>
-                    <label for="telefone">Telefone:</label>
-                    <input type="tel" id="telefone" name="telefone" required placeholder="(XX) XXXXX-XXXX" pattern="\([0-9]{2}\) [0-9]{5}-[0-9]{4}">
-                </div>
-            </fieldset>
-            <fieldset>
-                <legend>Endereço</legend>
-                <div>
-                    <label for="cep">CEP:</label>
-                    <input type="text" id="cep" name="cep" required placeholder="12345-678" pattern="\d{5}-\d{3}">
-                </div>
-                <div>
-                    <label for="endereco">Endereço (Rua, Nº, Bairro):</label>
-                    <input type="text" id="endereco" name="endereco" required>
-                </div>
-                <div>
-                    <label for="cidade">Cidade:</label>
-                    <input type="text" id="cidade" name="cidade" required>
-                </div>
-
-                <div>
-                    <label for="estado">Estado:</label>
-                    <select id="estado" name="estado" required>
-                        <option value="">Selecione...</option>
-                        <option value="AC">Acre</option>
-                        <option value="AL">Alagoas</option>
-                        <option value="AP">Amapá</option>
-                        <option value="AM">Amazonas</option>
-                        <option value="BA">Bahia</option>
-                        <option value="CE">Ceará</option>
-                        <option value="DF">Distrito Federal</option>
-                        <option value="ES">Espírito Santo</option>
-                        <option value="GO">Goiás</option>
-                        <option value="MA">Maranhão</option>
-                        <option value="MT">Mato Grosso</option>
-                        <option value="MS">Mato Grosso do Sul</option>
-                        <option value="MG">Minas Gerais</option>
-                        <option value="PA">Pará</option>
-                        <option value="PB">Paraíba</option>
-                        <option value="PR">Paraná</option>
-                        <option value="PE">Pernambuco</option>
-                        <option value="PI">Piauí</option>
-                        <option value="RJ">Rio de Janeiro</option>
-                        <option value="RN">Rio Grande do Norte</option>
-                        <option value="RS">Rio Grande do Sul</option>
-                        <option value="RO">Rondônia</option>
-                        <option value="RR">Roraima</option>
-                        <option value="SC">Santa Catarina</option>
-                        <option value="SP">São Paulo</option>
-                        <option value="SE">Sergipe</option>
-                        <option value="TO">Tocantins</option>
-                    </select>
-                </div>
-            </fieldset>
-            <div>
-                <button type="submit">Enviar Cadastro</button>
+        <div class="container">
+            <h2>Formulário de Cadastro de Voluntários</h2>
+            <p>Preencha seus dados abaixo e aguarde nosso contato.</p>
+            <div class="alert alert-success">
+                <span class="alert-icon">✅</span>
+                <p>Seu cadastro foi enviado com sucesso! Em breve entraremos em contato.</p>
             </div>
-        </form>
+            <div class="alert alert-error">
+                <span class="alert-icon">❌</span>
+                <p>Ocorreu um erro ao enviar seu cadastro. Por favor, revise os dados e tente novamente.</p>
+            </div>
+            <form action="#" method="post">
+                <fieldset>
+                    <legend>Dados Pessoais</legend>
+
+                    <div>
+                        <label for="nome">Nome Completo:</label>
+                        <input type="text" id="nome" name="nome_completo" required minlength="3">
+                    </div>
+                
+                    <div>
+                        <label for="email">E-mail:</label>
+                        <input type="email" id="email" name="email" required placeholder="seuemail@dominio.com">
+                    </div>
+
+                    <div>
+                        <label for="nascimento">Data de Nascimento:</label>
+                        <input type="date" id="nascimento" name="data_nascimento" required>
+                    </div>
+
+                    <div>
+                        <label for="telefone">Telefone:</label>
+                        <input type="tel" id="telefone" name="telefone" required placeholder="(XX) XXXXX-XXXX" pattern="\([0-9]{2}\) [0-9]{5}-[0-9]{4}">
+                    </div>
+                </fieldset>
+                <fieldset>
+                    <legend>Endereço</legend>
+                    <div>
+                        <label for="cep">CEP:</label>
+                        <input type="text" id="cep" name="cep" required placeholder="12345-678" pattern="\d{5}-\d{3}">
+                    </div>
+                    <div>
+                        <label for="endereco">Endereço (Rua, Nº, Bairro):</label>
+                        <input type="text" id="endereco" name="endereco" required>
+                    </div>
+                    <div>
+                        <label for="cidade">Cidade:</label>
+                        <input type="text" id="cidade" name="cidade" required>
+                    </div>
+
+                    <div>
+                        <label for="estado">Estado:</label>
+                        <select id="estado" name="estado" required>
+                            <option value="">Selecione...</option>
+                            <option value="AC">Acre</option>
+                            <option value="AL">Alagoas</option>
+                            <option value="AP">Amapá</option>
+                            <option value="AM">Amazonas</option>
+                            <option value="BA">Bahia</option>
+                            <option value="CE">Ceará</option>
+                            <option value="DF">Distrito Federal</option>
+                            <option value="ES">Espírito Santo</option>
+                            <option value="GO">Goiás</option>
+                            <option value="MA">Maranhão</option>
+                            <option value="MT">Mato Grosso</option>
+                            <option value="MS">Mato Grosso do Sul</option>
+                            <option value="MG">Minas Gerais</option>
+                            <option value="PA">Pará</option>
+                            <option value="PB">Paraíba</option>
+                            <option value="PR">Paraná</option>
+                            <option value="PE">Pernambuco</option>
+                            <option value="PI">Piauí</option>
+                            <option value="RJ">Rio de Janeiro</option>
+                            <option value="RN">Rio Grande do Norte</option>
+                            <option value="RS">Rio Grande do Sul</option>
+                            <option value="RO">Rondônia</option>
+                            <option value="RR">Roraima</option>
+                            <option value="SC">Santa Catarina</option>
+                            <option value="SP">São Paulo</option>
+                            <option value="SE">Sergipe</option>
+                            <option value="TO">Tocantins</option>
+                        </select>
+                    </div>
+                </fieldset>
+                <div>
+                    <button type="submit" class="btn">Enviar Cadastro</button>
+                </div>
+            </form>
+        </div>
     </main>
-    <footer>
-        <h2>Informações de Contato</h2>
-        <address>
-            <p>Endereço: Avenida Visconde de Guarapuava, 123 - Centro, Curitiba - PR</p>
-            <p>E-mail: <a href="mailto:contato@amicao.org">contato@amicao.org</a></p>
-            <p>Telefone: <a href="tel:+5541987125414">(41) 9 8712-5414</a></p>
-        </address>
-        <p>&copy; 2025 ONG AmiCão. Todos os direitos reservados.</p>
+    <footer class="rodape-principal">
+        <div class="container">
+            <div class="rodape-conteudo">
+                <div class="rodape-info">
+                    <h2>Informações de Contato</h2>
+                    <address>
+                        <p>Endereço: Avenida Visconde de Guarapuava, 123 - Centro, Curitiba - PR</p>
+                        <p>E-mail: <a href="mailto:contato@amicao.org">contato@amicao.org</a></p>
+                        <p>Telefone: <a href="tel:+5541987125414">(41) 9 8712-5414</a></p>
+                    </address>
+                </div>
+            </div>
+            <div class="rodape-copyright">
+                <p>&copy; 2025 ONG AmiCão. Todos os direitos reservados.</p>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
