--- a/cadastro.html
+++ b/cadastro.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ONG AmiCão - Cadastro</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="img/icone.png">
 </head>
 <body>
     <header>
