Finaliza Etapa 3 (JavaScript): Validação, SPA e Templates

--- a/cadastro.html
+++ b/cadastro.html
@@ -137,5 +137,8 @@
             </div>
         </div>
     </footer>
+    <script src="js/validacao-form.js"></script>
+    <script src="js/spa-navigation.js"></script>
+    <script src="js/project-cards.js"></script>
 </body>
 </html>
