--- a/projetos.html
+++ b/projetos.html
@@ -33,29 +33,6 @@
         <div class="container">
             <h2>Nossos Projetos e Como Ajudar</h2>
             <section class="grid-projetos">
-                <article id="voluntariado" class="card">
-                    <h3>Seja um Voluntário</h3>
-                    <img src="img/voluntario-brincando.png" alt="Voluntário brincando com um cachorro resgatado">
-                    <p>O voluntariado é a alma da nossa ONG. Precisamo de ajuda em diversas frentes:</p>
-                    <ul>
-                        <li>Passear e socializar com os cães.</li>
-                        <li>Ajudar na limpeza e organização do abrigo.</li>
-                        <li>Ser lar temporário para animais em recuperação.</li>
-                        <li>Ajudar em feiras de adoção.</li>
-                    </ul>
-                    <p><a href="cadastro.html" class="btn">Quero ser voluntário</a></p>
-                </article>
-
-                <article id="doacao" class="card">
-                    <h3>Como Doar</h3>
-                    <p>Manter o abrigo tem um custo alto. Sua doação é fundamental para comprarmos ração, medicamentos e pagarmos custos veterinários</p>
-                    <p>Formas de doar:</p>
-                    <ul>
-                        <li><strong>PIX (CNPJ):</strong> 12.345.678/0001-99</li>
-                        <li><strong>Depósito Bancário</strong> Banco X, Agência 0001, Conta 12345-6</li>
-                        <li><strong>Doação de Itens:</strong> Aceitamos ração (fechada), cobertores e medicamentos na nossa sede</li>
-                    </ul>
-                </article>
             </section>
         </div>
     </main>
@@ -76,5 +53,8 @@
             </div>
         </div>
     </footer>
+    <script src="js/validacao-form.js"></script>
+    <script src="js/spa-navigation.js"></script>
+    <script src="js/project-cards.js"></script>
 </body>
 </html>
