--- a/index.html
+++ b/index.html
@@ -68,5 +68,8 @@
             </div>
         </div>
     </footer>
+    <script src="js/validacao-form.js"></script>
+    <script src="js/spa-navigation.js"></script>
+    <script src="js/project-cards.js"></script>
 </body>
 </html>
