chore: Finaliza projeto e otimiza arquivos

--- a/index.html
+++ b/index.html
@@ -1,75 +1,74 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+<!doctype html>
+<html lang=pt-br>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ONG AmiCão - Início</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/png" href="img/icone.png">
+<meta charset=UTF-8>
+<meta name=viewport content="width=device-width,initial-scale=1">
+<title>ONG AmiCão - Início</title>
+<link rel=stylesheet href=css/style.css>
+<link rel=icon type=image/png href=img/icone.png>
 </head>
 <body>
-    <header>
-        <div class="container"> 
-            <h1>ONG AmiCão</h1>
-            <input type="checkbox" id="menu-toggle" class="menu-toggle-checkbox">
-            <label for="menu-toggle" class="menu-toggle-label">
-                <span class="hamburger"></span>
-            </label>
-            <nav class="menu">
-                <ul>
-                    <li><a href="index.html">Início</a></li>
-                    <li class="dropdown"> <a href="projetos.html">Nossos Projetos</a>
-                        <ul class="dropdown-menu">
-                            <li><a href="projetos.html#voluntariado">Voluntariado</a></li>
-                            <li><a href="projetos.html#doacao">Como Doar</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="cadastro.html">Seja um Voluntário</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <main>
-        <div class="container">
-            <section id="sobre-nos">
-            <h2>Bem-vindo ao AmiCão! <span class="badge">Novo!</span></h2> 
-            <p>Acreditamos que todo animal merece uma segunda chance. Trabalhamos incansavelmente para resgatar, reabilitar e encontrar lares amorosos para cães e gatos em situação de rua na nossa cidade.</p>
-            <p>Nossa equipe de voluntários dedicados garante que cada animal receba cuidados veterinários, alimentação adequada e muito carinho.</p>
-
-            <div class="row row-md-2" style="margin-top: var(--espaco-g);"> 
-                <div class="col-md-6"> 
-                    <h3>Nosso Propósito</h3>
-                    <p>Com anos de dedicação, já conseguimos transformar a vida de centenas de animais. Nosso compromisso é com o bem-estar e a felicidade, um resgate de cada vez.</p>
-                    <p>Venha nos conhecer e descubra como você pode fazer a diferença na vida de um animal.</p>
-                </div>
-
-                <div class="col-md-6">
-                    <img src="img/abrigo-caes.png" alt="Cães resgatados brincando em nosso abrigo">
-                </div>
-
-            </div> 
-        </section>
-        </div>
-    </main>
-    <footer class="rodape-principal">
-        <div class="container">
-            <div class="rodape-conteudo">
-                <div class="rodape-info">
-                    <h2>Informações de Contato</h2>
-                    <address>
-                        <p>Endereço: Avenida Visconde de Guarapuava, 123 - Centro, Curitiba - PR</p>
-                        <p>E-mail: <a href="mailto:contato@amicao.org">contato@amicao.org</a></p>
-                        <p>Telefone: <a href="tel:+5541987125414">(41) 9 8712-5414</a></p>
-                    </address>
-                </div>
-            </div>
-            <div class="rodape-copyright">
-                <p>&copy; 2025 ONG AmiCão. Todos os direitos reservados.</p>
-            </div>
-        </div>
-    </footer>
-    <script src="js/validacao-form.js"></script>
-    <script src="js/spa-navigation.js"></script>
-    <script src="js/project-cards.js"></script>
+<header>
+<div class=container>
+<h1>ONG AmiCão</h1>
+<input type=checkbox id=menu-toggle class=menu-toggle-checkbox>
+<label for=menu-toggle class=menu-toggle-label>
+<span class=hamburger></span>
+</label>
+<nav class=menu>
+<ul>
+<li><a href=index.html>Início</a></li>
+<li class=dropdown> <a href=projetos.html>Nossos Projetos</a>
+<ul class=dropdown-menu>
+<li><a href=projetos.html#voluntariado>Voluntariado</a></li>
+<li><a href=projetos.html#doacao>Como Doar</a></li>
+</ul>
+</li>
+<li><a href=cadastro.html>Seja um Voluntário</a></li>
+</ul>
+</nav>
+<button id=theme-toggle class=theme-toggle-btn>🌙</button>
+</div>
+</header>
+<main>
+<div class=container>
+<section id=sobre-nos>
+<h2>Bem-vindo ao AmiCão! <span class=badge>Novo!</span></h2>
+<p>Acreditamos que todo animal merece uma segunda chance. Trabalhamos incansavelmente para resgatar, reabilitar e encontrar lares amorosos para cães e gatos em situação de rua na nossa cidade.</p>
+<p>Nossa equipe de voluntários dedicados garante que cada animal receba cuidados veterinários, alimentação adequada e muito carinho.</p>
+<div class="row row-md-2" style=margin-top:var(--espaco-g)>
+<div class=col-md-6>
+<h3>Nosso Propósito</h3>
+<p>Com anos de dedicação, já conseguimos transformar a vida de centenas de animais. Nosso compromisso é com o bem-estar e a felicidade, um resgate de cada vez.</p>
+<p>Venha nos conhecer e descubra como você pode fazer a diferença na vida de um animal.</p>
+</div>
+<div class=col-md-6>
+<img src=img/abrigo-caes.png alt="Cães resgatados brincando em nosso abrigo">
+</div>
+</div>
+</section>
+</div>
+</main>
+<footer class=rodape-principal>
+<div class=container>
+<div class=rodape-conteudo>
+<div class=rodape-info>
+<h2>Informações de Contato</h2>
+<address>
+<p>Endereço: Avenida Visconde de Guarapuava, 123 - Centro, Curitiba - PR</p>
+<p>E-mail: <a href=mailto:contato@amicao.org>contato@amicao.org</a></p>
+<p>Telefone: <a href=tel:+5541987125414>(41) 9 8712-5414</a></p>
+</address>
+</div>
+</div>
+<div class=rodape-copyright>
+<p>&copy; 2025 ONG AmiCão. Todos os direitos reservados.</p>
+</div>
+</div>
+</footer>
+<script src=js/validacao-form.js></script>
+<script src=js/spa-navigation.js></script>
+<script src=js/project-cards.js></script>
+<script src=js/theme-toggle.js></script>
 </body>
 </html>
