--- a/projetos.html
+++ b/projetos.html
@@ -1,60 +1,62 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+<!doctype html>
+<html lang=pt-br>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ONG AmiCão - Nossos Projetos</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/png" href="img/icone.png">
+<meta charset=UTF-8>
+<meta name=viewport content="width=device-width,initial-scale=1">
+<title>ONG AmiCão - Nossos Projetos</title>
+<link rel=stylesheet href=css/style.css>
+<link rel=icon type=image/png href=img/icone.png>
 </head>
 <body>
-    <header>
-        <div class="container"> 
-            <h1>ONG AmiCão</h1>
-            <input type="checkbox" id="menu-toggle" class="menu-toggle-checkbox">
-            <label for="menu-toggle" class="menu-toggle-label">
-                <span class="hamburger"></span>
-            </label>
-            <nav class="menu">
-                <ul>
-                    <li><a href="index.html">Início</a></li>
-                    <li class="dropdown"> <a href="projetos.html">Nossos Projetos</a>
-                        <ul class="dropdown-menu">
-                            <li><a href="projetos.html#voluntariado">Voluntariado</a></li>
-                            <li><a href="projetos.html#doacao">Como Doar</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="cadastro.html">Seja um Voluntário</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <main>
-        <div class="container">
-            <h2>Nossos Projetos e Como Ajudar</h2>
-            <section class="grid-projetos">
-            </section>
-        </div>
-    </main>
-    <footer class="rodape-principal">
-        <div class="container">
-            <div class="rodape-conteudo">
-                <div class="rodape-info">
-                    <h2>Informações de Contato</h2>
-                    <address>
-                        <p>Endereço: Avenida Visconde de Guarapuava, 123 - Centro, Curitiba - PR</p>
-                        <p>E-mail: <a href="mailto:contato@amicao.org">contato@amicao.org</a></p>
-                        <p>Telefone: <a href="tel:+5541987125414">(41) 9 8712-5414</a></p>
-                    </address>
-                </div>
-            </div>
-            <div class="rodape-copyright">
-                <p>&copy; 2025 ONG AmiCão. Todos os direitos reservados.</p>
-            </div>
-        </div>
-    </footer>
-    <script src="js/validacao-form.js"></script>
-    <script src="js/spa-navigation.js"></script>
-    <script src="js/project-cards.js"></script>
+<header>
+<div class=container>
+<h1>ONG AmiCão</h1>
+<input type=checkbox id=menu-toggle class=menu-toggle-checkbox>
+<label for=menu-toggle class=menu-toggle-label>
+<span class=hamburger></span>
+</label>
+<nav class=menu>
+<ul>
+<li><a href=index.html>Início</a></li>
+<li class=dropdown> <a href=projetos.html>Nossos Projetos</a>
+<ul class=dropdown-menu>
+<li><a href=projetos.html#voluntariado>Voluntariado</a></li>
+<li><a href=projetos.html#doacao>Como Doar</a></li>
+</ul>
+</li>
+<li><a href=cadastro.html>Seja um Voluntário</a></li>
+</ul>
+</nav>
+<button id=theme-toggle class=theme-toggle-btn>🌙</button>
+</div>
+</header>
+<main>
+<div class=container>
+<h2>Nossos Projetos e Como Ajudar</h2>
+<section class=grid-projetos>
+</section>
+</div>
+</main>
+<footer class=rodape-principal>
+<div class=container>
+<div class=rodape-conteudo>
+<div class=rodape-info>
+<h2>Informações de Contato</h2>
+<address>
+<p>Endereço: Avenida Visconde de Guarapuava, 123 - Centro, Curitiba - PR</p>
+<p>E-mail: <a href=mailto:contato@amicao.org>contato@amicao.org</a></p>
+<p>Telefone: <a href=tel:+5541987125414>(41) 9 8712-5414</a></p>
+</address>
+</div>
+</div>
+<div class=rodape-copyright>
+<p>&copy; 2025 ONG AmiCão. Todos os direitos reservados.</p>
+</div>
+</div>
+</footer>
+<script src=js/validacao-form.js></script>
+<script src=js/spa-navigation.js></script>
+<script src=js/project-cards.js></script>
+<script src=js/theme-toggle.js></script>
 </body>
 </html>
